# solana_allstars_ve_bot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: bot_tests.rs
