[package]
name = "solana_allstars_ve_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }

[lib]
name = "solana_allstars_ve_bot"
path = "src/lib.rs"
